# fast-implicit-uniform-sampling

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: .gitignore  README.md  benchmark_ray_sampling.ipynb  benchmark_ray_sampling.py  benchmark_sphere_tracing.ipynb  benchmark_sphere_tracing.py  benchmark_sphere_tracing_loop_structure.ipynb  benchmark_sphere_tracing_ray_budgeting.ipynb  benchmark_sphere_tracing_ray_split_thresholds.ipynb  benchmark_uniform_point_sampling.ipynb  benchmark_uniform_point_sampling.py  dataset.py  geometry.py  ling_pytorch.py  measure_sample_uniformity.ipynb  measure_sample_uniformity.py  network.py  requirements.txt  utils.py
benchmarks/data/sdf_net_weights/: armadillo.pt  bunny.pt  cube.pt  dachshund.pt  dinosaur.pt  dolphin.pt  dragon.pt  fertility.pt  frog.pt  geko.pt  hand.pt  hilbert_cube.pt  lucy.pt  rhino.pt  shiba.pt  sphere.pt  spot.pt  trex.pt  turtle.pt  tweety.pt  whale.pt
fast_implicit_uniform_sampling/: __init__.py  sampling.py
